Estructuro a un nivel muy basico la memoria

--- a/Documento/Trabajo.tex
+++ b/Documento/Trabajo.tex
@@ -1,6 +1,57 @@
-\documentclass[a4paper, 12pt]{article}
-\author{Sergio Quijano Rey, Daniel Gálvez}
+% Librerias adicionales
+%===============================================================================
+\usepackage[utf8]{inputenc}
 
+% Metadatos del documento
+%===============================================================================
+\documentclass{article}
+\author{Sergio Quijano Rey, Daniel Gálvez}
+\title{Memoria Trabajo Fundamentos de Redes}
+
+
+% Documento
+%===============================================================================
 \begin{document}
-    \maketitle
+
+% Titulo
+%===============================================================================
+\maketitle
+\newpage
+
+% Tabla de contenidos
+%===============================================================================
+\tableofcontents
+\newpage
+
+% SECCION Motivacion
+%===============================================================================
+\section{Motivacion}
+\end{Motivacion}
+
+% SECCION Instalacion basica del servidor
+%===============================================================================
+\section{Instalación básica del servidor}
+\end{Instalación básica del servidor}
+
+% SECCION Aspectos de redes en la instalacion del servidor
+%===============================================================================
+\section{Aspectos de Redes en la instalación del servidor}
+\end{Aspectos de Redes en la instalación del servidor}
+
+% SECCION Instalacion de Nextcloud
+%===============================================================================
+\section{Instalación de Nextcloud}
+\end{Instalación de Nextcloud}
+
+% SECCION Uso básico de Nextcloud
+%===============================================================================
+\section{Uso básico de Nextcloud}
+\end{Uso básico de Nextcloud}
+
+% SECCION Analisis del sistema
+%===============================================================================
+\section{Análisis del sistema}
+\end{Análisis del sistema}
+
+
 \end{document}
