--- a/Documento/Trabajo.tex
+++ b/Documento/Trabajo.tex
@@ -26,7 +26,16 @@
 % SECCION Motivacion
 %===============================================================================
 \section{Motivacion}
+
+La motivación que hay detrás de este trabajo es la de estudiar cómo funcionan los productos de almacenamiento en la nube, a través de la creación de un servidor bastante básico de almacenamiento en red sobre nuestro propio servidor. Esto nos ha permitido conocer y aprender hasta cierto punto los aspectos a tener en cuenta para crear infraestructuras de este tipo, centrándonos especialmente en aspectos específicos de las redes
+
 \end{Motivacion}
+\newpage
+
+% SECCION Especificacion del servidor
+%===============================================================================
+\section{Especificación del hardware usado}
+\end{Especificación del hardware usado}
 
 % SECCION Instalacion basica del servidor
 %===============================================================================
